last update 31 december

--- a/public/admin/assets/css/pages/auth.css
+++ b/public/admin/assets/css/pages/auth.css
@@ -9,7 +9,7 @@ body {
 
 #auth #auth-right {
     height: 100%;
-    background-color: #316064;
+    background-color: #1A76D1;
     padding: 30%;
 }
 
